
Build Improvement::

* Upgrade build to Gradle 8.0.1 (#1141)
* Upgrade Spring Boot test to 3.0.0 (#1134)
* Run tests on Java 19 (#1563)
* Fix upstream tests forcing SNAPSHOT on Asciidoctor gem installation (#1123) (@abelsromero)
* Fix upstream build removing the explicit plugin repository (#1131)
* Set JUnit5 as default test engine (#1186) (@abelsromero)

== 2.5.4 (2022-06-30)

Improvement::

* Upgrade to asciidoctorj-diagram 2.2.3 (#1091)
* Upgrade to jcommander 1.81 (#1079)
* Upgrade to JRuby 9.3.4.0 (#1085)
* Upgrade to Rouge 3.28.0 (#1085)

Bug Fixes::

* Make DescriptionList.getBlocks() return null instead of a List of DescriptionListItems resulting in a ClassCastException (#1082) (@someth2say)

Build Improvement::

* Upgrade to gradle 7.4.2 (#1086)
* Upgrade to Wildfly 26.0.1 for integration test (#1085)
* Upgrade to Spring Boot 2.6.5 for integration test (#1085)
* Fix gem version check task (#1087)
* Release from Github Actions (#1090)

Documentation::

== 2.5.3 (2022-01-12)

Improvement::

* Upgrade to asciidoctorj 2.0.17 (#1074)
* Upgrade to asciidoctorj-pdf 1.6.2 (#1073)
* Upgrade to asciidoctorj-diagram 2.2.1 (#1066) (@abelsromero) (#1065)
* Upgrade to jruby 9.2.20.1 (#1074)
* Upgrade to rouge 3.27.0 (#1073)
* Upgrade CLI to use JCommander 1.81 (@abelsromero) (#1067)

Build Improvement::

* Add Java17 to CI pipelines (@abelsromero) (#1055)
* Improve pipelines to better display Asciidoctor test upstream (@abelsromero) (#1057)

Documentation::

* Clarify execution order for extensions (@rockyallen) (#1068)
* Added docs for attributes and positional attributes in extensions (#1072)
* Added docs for how to log from extensions (#1071)


== 2.5.2 (2021-08-08)

Improvement::

* Upgrade to asciidoctorj 2.0.16 (#1052)
* Upgrade to asciidoctorj-pdf 1.6.0 (#1040)

Bug Fixes::

* Avoid using of deprecated attributes toc2 and toc-placement.
  Deprecated Attributes.setTableOfContents2().